# lista-2

./: .gitignore  CMakeLists.txt
zad1/: CMakeLists.txt  Wielomian.cpp  Wielomian.h  main.cpp  test.cpp
zad2/: CMakeLists.txt  DNASequence.cpp  DNASequence.h  ProteinSequence.cpp  ProteinSequence.h  RNASequence.cpp  RNASequence.h  Sequence.cpp  Sequence.h  main.cpp  testDNA.cpp  testProtein.cpp  testRNA.cpp
